sintatico/parser.automaton
State 0:
prog' -> . prog [ # ]
-- On PROGRAM shift to state 1
-- On prog shift to state 4
-- On declaracao_init shift to state 5

State 1:
declaracao_init -> PROGRAM . ID PTVIRG [ VAR FUNCTION AESCOP ]
-- On ID shift to state 2

State 2:
declaracao_init -> PROGRAM ID . PTVIRG [ VAR FUNCTION AESCOP ]
-- On PTVIRG shift to state 3

State 3:
declaracao_init -> PROGRAM ID PTVIRG . [ VAR FUNCTION AESCOP ]
-- On VAR reduce production declaracao_init -> PROGRAM ID PTVIRG 
-- On FUNCTION reduce production declaracao_init -> PROGRAM ID PTVIRG 
-- On AESCOP reduce production declaracao_init -> PROGRAM ID PTVIRG 

State 4:
prog' -> prog . [ # ]
-- On # accept prog

State 5:
prog -> declaracao_init . option(declaracao_func) option(declaracao_var_block) block_comando EOF [ # ]
-- On FUNCTION shift to state 6
-- On option(declaracao_func) shift to state 165
-- On declaracao_func shift to state 180
-- On VAR reduce production option(declaracao_func) -> 
-- On AESCOP reduce production option(declaracao_func) -> 

State 6:
declaracao_func -> FUNCTION . ID nonempty_list(argumentos) DPTS tipo_nomenclatura PTVIRG block_comando [ VAR AESCOP ]
-- On ID shift to state 7

State 7:
declaracao_func -> FUNCTION ID . nonempty_list(argumentos) DPTS tipo_nomenclatura PTVIRG block_comando [ VAR AESCOP ]
-- On APAR shift to state 8
-- On nonempty_list(argumentos) shift to state 21
-- On argumentos shift to state 163

State 8:
argumentos -> APAR . separated_nonempty_list(VIRG,ID) DPTS tipo_nomenclatura FPAR [ DPTS APAR ]
-- On ID shift to state 9
-- On separated_nonempty_list(VIRG,ID) shift to state 12

State 9:
separated_nonempty_list(VIRG,ID) -> ID . [ DPTS ]
separated_nonempty_list(VIRG,ID) -> ID . VIRG separated_nonempty_list(VIRG,ID) [ DPTS ]
-- On VIRG shift to state 10
-- On DPTS reduce production separated_nonempty_list(VIRG,ID) -> ID 

State 10:
separated_nonempty_list(VIRG,ID) -> ID VIRG . separated_nonempty_list(VIRG,ID) [ DPTS ]
-- On ID shift to state 9
-- On separated_nonempty_list(VIRG,ID) shift to state 11

State 11:
separated_nonempty_list(VIRG,ID) -> ID VIRG separated_nonempty_list(VIRG,ID) . [ DPTS ]
-- On DPTS reduce production separated_nonempty_list(VIRG,ID) -> ID VIRG separated_nonempty_list(VIRG,ID) 

State 12:
argumentos -> APAR separated_nonempty_list(VIRG,ID) . DPTS tipo_nomenclatura FPAR [ DPTS APAR ]
-- On DPTS shift to state 13

State 13:
argumentos -> APAR separated_nonempty_list(VIRG,ID) DPTS . tipo_nomenclatura FPAR [ DPTS APAR ]
-- On STRING shift to state 14
-- On REAL shift to state 15
-- On INTEIRO shift to state 16
-- On CHAR shift to state 17
-- On BOOLEANO shift to state 18
-- On tipo_nomenclatura shift to state 19

State 14:
tipo_nomenclatura -> STRING . [ PTVIRG FPAR ]
-- On PTVIRG reduce production tipo_nomenclatura -> STRING 
-- On FPAR reduce production tipo_nomenclatura -> STRING 

State 15:
tipo_nomenclatura -> REAL . [ PTVIRG FPAR ]
-- On PTVIRG reduce production tipo_nomenclatura -> REAL 
-- On FPAR reduce production tipo_nomenclatura -> REAL 

State 16:
tipo_nomenclatura -> INTEIRO . [ PTVIRG FPAR ]
-- On PTVIRG reduce production tipo_nomenclatura -> INTEIRO 
-- On FPAR reduce production tipo_nomenclatura -> INTEIRO 

State 17:
tipo_nomenclatura -> CHAR . [ PTVIRG FPAR ]
-- On PTVIRG reduce production tipo_nomenclatura -> CHAR 
-- On FPAR reduce production tipo_nomenclatura -> CHAR 

State 18:
tipo_nomenclatura -> BOOLEANO . [ PTVIRG FPAR ]
-- On PTVIRG reduce production tipo_nomenclatura -> BOOLEANO 
-- On FPAR reduce production tipo_nomenclatura -> BOOLEANO 

State 19:
argumentos -> APAR separated_nonempty_list(VIRG,ID) DPTS tipo_nomenclatura . FPAR [ DPTS APAR ]
-- On FPAR shift to state 20

State 20:
argumentos -> APAR separated_nonempty_list(VIRG,ID) DPTS tipo_nomenclatura FPAR . [ DPTS APAR ]
-- On DPTS reduce production argumentos -> APAR separated_nonempty_list(VIRG,ID) DPTS tipo_nomenclatura FPAR 
-- On APAR reduce production argumentos -> APAR separated_nonempty_list(VIRG,ID) DPTS tipo_nomenclatura FPAR 

State 21:
declaracao_func -> FUNCTION ID nonempty_list(argumentos) . DPTS tipo_nomenclatura PTVIRG block_comando [ VAR AESCOP ]
-- On DPTS shift to state 22

State 22:
declaracao_func -> FUNCTION ID nonempty_list(argumentos) DPTS . tipo_nomenclatura PTVIRG block_comando [ VAR AESCOP ]
-- On STRING shift to state 14
-- On REAL shift to state 15
-- On INTEIRO shift to state 16
-- On CHAR shift to state 17
-- On BOOLEANO shift to state 18
-- On tipo_nomenclatura shift to state 23

State 23:
declaracao_func -> FUNCTION ID nonempty_list(argumentos) DPTS tipo_nomenclatura . PTVIRG block_comando [ VAR AESCOP ]
-- On PTVIRG shift to state 24

State 24:
declaracao_func -> FUNCTION ID nonempty_list(argumentos) DPTS tipo_nomenclatura PTVIRG . block_comando [ VAR AESCOP ]
-- On AESCOP shift to state 25
-- On block_comando shift to state 162

State 25:
block_comando -> AESCOP . list(comando) FESCOP [ VAR EOF AESCOP ]
-- On WRITELN shift to state 26
-- On WRITE shift to state 42
-- On WHILE shift to state 46
-- On READLN shift to state 97
-- On READ shift to state 101
-- On IF shift to state 105
-- On ID shift to state 109
-- On FOR shift to state 118
-- On CASE shift to state 124
-- On list(comando) shift to state 158
-- On comando_while shift to state 130
-- On comando_se shift to state 131
-- On comando_saida shift to state 132
-- On comando_for shift to state 134
-- On comando_entrada shift to state 135
-- On comando_case shift to state 137
-- On comando_atribuicao shift to state 138
-- On comando shift to state 160
-- On FESCOP reduce production list(comando) -> 

State 26:
comando_saida -> WRITELN . APAR separated_nonempty_list(VIRG,entrada) FPAR [ PTVIRG ]
-- On APAR shift to state 27

State 27:
comando_saida -> WRITELN APAR . separated_nonempty_list(VIRG,entrada) FPAR [ PTVIRG ]
-- On TRUE shift to state 28
-- On LITSTRING shift to state 29
-- On LITCHAR shift to state 30
-- On INT shift to state 31
-- On ID shift to state 32
-- On FLOAT shift to state 33
-- On FALSE shift to state 34
-- On tipo_primitivo shift to state 35
-- On tipo_bool shift to state 36
-- On separated_nonempty_list(VIRG,entrada) shift to state 37
-- On entrada shift to state 39

State 28:
tipo_bool -> TRUE . [ WRITELN WRITE WHILE VIRG TRUE TO THEN READLN READ PTVIRG OULOG MULT MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR LITSTRING LITCHAR INT IGUAL IF ID FPAR FOR FLOAT FESCOP FALSE ELOG DPTS DO DIV DIF CASE ]
-- On WRITELN reduce production tipo_bool -> TRUE 
-- On WRITE reduce production tipo_bool -> TRUE 
-- On WHILE reduce production tipo_bool -> TRUE 
-- On VIRG reduce production tipo_bool -> TRUE 
-- On TRUE reduce production tipo_bool -> TRUE 
-- On TO reduce production tipo_bool -> TRUE 
-- On THEN reduce production tipo_bool -> TRUE 
-- On READLN reduce production tipo_bool -> TRUE 
-- On READ reduce production tipo_bool -> TRUE 
-- On PTVIRG reduce production tipo_bool -> TRUE 
-- On OULOG reduce production tipo_bool -> TRUE 
-- On MULT reduce production tipo_bool -> TRUE 
-- On MENOS reduce production tipo_bool -> TRUE 
-- On MENORIGUAL reduce production tipo_bool -> TRUE 
-- On MENOR reduce production tipo_bool -> TRUE 
-- On MAIS reduce production tipo_bool -> TRUE 
-- On MAIORIGUAL reduce production tipo_bool -> TRUE 
-- On MAIOR reduce production tipo_bool -> TRUE 
-- On LITSTRING reduce production tipo_bool -> TRUE 
-- On LITCHAR reduce production tipo_bool -> TRUE 
-- On INT reduce production tipo_bool -> TRUE 
-- On IGUAL reduce production tipo_bool -> TRUE 
-- On IF reduce production tipo_bool -> TRUE 
-- On ID reduce production tipo_bool -> TRUE 
-- On FPAR reduce production tipo_bool -> TRUE 
-- On FOR reduce production tipo_bool -> TRUE 
-- On FLOAT reduce production tipo_bool -> TRUE 
-- On FESCOP reduce production tipo_bool -> TRUE 
-- On FALSE reduce production tipo_bool -> TRUE 
-- On ELOG reduce production tipo_bool -> TRUE 
-- On DPTS reduce production tipo_bool -> TRUE 
-- On DO reduce production tipo_bool -> TRUE 
-- On DIV reduce production tipo_bool -> TRUE 
-- On DIF reduce production tipo_bool -> TRUE 
-- On CASE reduce production tipo_bool -> TRUE 

State 29:
tipo_primitivo -> LITSTRING . [ WRITELN WRITE WHILE VIRG TRUE TO THEN READLN READ PTVIRG OULOG MULT MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR LITSTRING LITCHAR INT IGUAL IF ID FPAR FOR FLOAT FESCOP FALSE ELOG DPTS DO DIV DIF CASE ]
-- On WRITELN reduce production tipo_primitivo -> LITSTRING 
-- On WRITE reduce production tipo_primitivo -> LITSTRING 
-- On WHILE reduce production tipo_primitivo -> LITSTRING 
-- On VIRG reduce production tipo_primitivo -> LITSTRING 
-- On TRUE reduce production tipo_primitivo -> LITSTRING 
-- On TO reduce production tipo_primitivo -> LITSTRING 
-- On THEN reduce production tipo_primitivo -> LITSTRING 
-- On READLN reduce production tipo_primitivo -> LITSTRING 
-- On READ reduce production tipo_primitivo -> LITSTRING 
-- On PTVIRG reduce production tipo_primitivo -> LITSTRING 
-- On OULOG reduce production tipo_primitivo -> LITSTRING 
-- On MULT reduce production tipo_primitivo -> LITSTRING 
-- On MENOS reduce production tipo_primitivo -> LITSTRING 
-- On MENORIGUAL reduce production tipo_primitivo -> LITSTRING 
-- On MENOR reduce production tipo_primitivo -> LITSTRING 
-- On MAIS reduce production tipo_primitivo -> LITSTRING 
-- On MAIORIGUAL reduce production tipo_primitivo -> LITSTRING 
-- On MAIOR reduce production tipo_primitivo -> LITSTRING 
-- On LITSTRING reduce production tipo_primitivo -> LITSTRING 
-- On LITCHAR reduce production tipo_primitivo -> LITSTRING 
-- On INT reduce production tipo_primitivo -> LITSTRING 
-- On IGUAL reduce production tipo_primitivo -> LITSTRING 
-- On IF reduce production tipo_primitivo -> LITSTRING 
-- On ID reduce production tipo_primitivo -> LITSTRING 
-- On FPAR reduce production tipo_primitivo -> LITSTRING 
-- On FOR reduce production tipo_primitivo -> LITSTRING 
-- On FLOAT reduce production tipo_primitivo -> LITSTRING 
-- On FESCOP reduce production tipo_primitivo -> LITSTRING 
-- On FALSE reduce production tipo_primitivo -> LITSTRING 
-- On ELOG reduce production tipo_primitivo -> LITSTRING 
-- On DPTS reduce production tipo_primitivo -> LITSTRING 
-- On DO reduce production tipo_primitivo -> LITSTRING 
-- On DIV reduce production tipo_primitivo -> LITSTRING 
-- On DIF reduce production tipo_primitivo -> LITSTRING 
-- On CASE reduce production tipo_primitivo -> LITSTRING 

State 30:
tipo_primitivo -> LITCHAR . [ WRITELN WRITE WHILE VIRG TRUE TO THEN READLN READ PTVIRG OULOG MULT MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR LITSTRING LITCHAR INT IGUAL IF ID FPAR FOR FLOAT FESCOP FALSE ELOG DPTS DO DIV DIF CASE ]
-- On WRITELN reduce production tipo_primitivo -> LITCHAR 
-- On WRITE reduce production tipo_primitivo -> LITCHAR 
-- On WHILE reduce production tipo_primitivo -> LITCHAR 
-- On VIRG reduce production tipo_primitivo -> LITCHAR 
-- On TRUE reduce production tipo_primitivo -> LITCHAR 
-- On TO reduce production tipo_primitivo -> LITCHAR 
-- On THEN reduce production tipo_primitivo -> LITCHAR 
-- On READLN reduce production tipo_primitivo -> LITCHAR 
-- On READ reduce production tipo_primitivo -> LITCHAR 
-- On PTVIRG reduce production tipo_primitivo -> LITCHAR 
-- On OULOG reduce production tipo_primitivo -> LITCHAR 
-- On MULT reduce production tipo_primitivo -> LITCHAR 
-- On MENOS reduce production tipo_primitivo -> LITCHAR 
-- On MENORIGUAL reduce production tipo_primitivo -> LITCHAR 
-- On MENOR reduce production tipo_primitivo -> LITCHAR 
-- On MAIS reduce production tipo_primitivo -> LITCHAR 
-- On MAIORIGUAL reduce production tipo_primitivo -> LITCHAR 
-- On MAIOR reduce production tipo_primitivo -> LITCHAR 
-- On LITSTRING reduce production tipo_primitivo -> LITCHAR 
-- On LITCHAR reduce production tipo_primitivo -> LITCHAR 
-- On INT reduce production tipo_primitivo -> LITCHAR 
-- On IGUAL reduce production tipo_primitivo -> LITCHAR 
-- On IF reduce production tipo_primitivo -> LITCHAR 
-- On ID reduce production tipo_primitivo -> LITCHAR 
-- On FPAR reduce production tipo_primitivo -> LITCHAR 
-- On FOR reduce production tipo_primitivo -> LITCHAR 
-- On FLOAT reduce production tipo_primitivo -> LITCHAR 
-- On FESCOP reduce production tipo_primitivo -> LITCHAR 
-- On FALSE reduce production tipo_primitivo -> LITCHAR 
-- On ELOG reduce production tipo_primitivo -> LITCHAR 
-- On DPTS reduce production tipo_primitivo -> LITCHAR 
-- On DO reduce production tipo_primitivo -> LITCHAR 
-- On DIV reduce production tipo_primitivo -> LITCHAR 
-- On DIF reduce production tipo_primitivo -> LITCHAR 
-- On CASE reduce production tipo_primitivo -> LITCHAR 

State 31:
tipo_primitivo -> INT . [ WRITELN WRITE WHILE VIRG TRUE TO THEN READLN READ PTVIRG OULOG MULT MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR LITSTRING LITCHAR INT IGUAL IF ID FPAR FOR FLOAT FESCOP FALSE ELOG DPTS DO DIV DIF CASE ]
-- On WRITELN reduce production tipo_primitivo -> INT 
-- On WRITE reduce production tipo_primitivo -> INT 
-- On WHILE reduce production tipo_primitivo -> INT 
-- On VIRG reduce production tipo_primitivo -> INT 
-- On TRUE reduce production tipo_primitivo -> INT 
-- On TO reduce production tipo_primitivo -> INT 
-- On THEN reduce production tipo_primitivo -> INT 
-- On READLN reduce production tipo_primitivo -> INT 
-- On READ reduce production tipo_primitivo -> INT 
-- On PTVIRG reduce production tipo_primitivo -> INT 
-- On OULOG reduce production tipo_primitivo -> INT 
-- On MULT reduce production tipo_primitivo -> INT 
-- On MENOS reduce production tipo_primitivo -> INT 
-- On MENORIGUAL reduce production tipo_primitivo -> INT 
-- On MENOR reduce production tipo_primitivo -> INT 
-- On MAIS reduce production tipo_primitivo -> INT 
-- On MAIORIGUAL reduce production tipo_primitivo -> INT 
-- On MAIOR reduce production tipo_primitivo -> INT 
-- On LITSTRING reduce production tipo_primitivo -> INT 
-- On LITCHAR reduce production tipo_primitivo -> INT 
-- On INT reduce production tipo_primitivo -> INT 
-- On IGUAL reduce production tipo_primitivo -> INT 
-- On IF reduce production tipo_primitivo -> INT 
-- On ID reduce production tipo_primitivo -> INT 
-- On FPAR reduce production tipo_primitivo -> INT 
-- On FOR reduce production tipo_primitivo -> INT 
-- On FLOAT reduce production tipo_primitivo -> INT 
-- On FESCOP reduce production tipo_primitivo -> INT 
-- On FALSE reduce production tipo_primitivo -> INT 
-- On ELOG reduce production tipo_primitivo -> INT 
-- On DPTS reduce production tipo_primitivo -> INT 
-- On DO reduce production tipo_primitivo -> INT 
-- On DIV reduce production tipo_primitivo -> INT 
-- On DIF reduce production tipo_primitivo -> INT 
-- On CASE reduce production tipo_primitivo -> INT 

State 32:
entrada -> ID . [ VIRG THEN OULOG MULT MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DO DIV DIF ]
-- On VIRG reduce production entrada -> ID 
-- On THEN reduce production entrada -> ID 
-- On OULOG reduce production entrada -> ID 
-- On MULT reduce production entrada -> ID 
-- On MENOS reduce production entrada -> ID 
-- On MENORIGUAL reduce production entrada -> ID 
-- On MENOR reduce production entrada -> ID 
-- On MAIS reduce production entrada -> ID 
-- On MAIORIGUAL reduce production entrada -> ID 
-- On MAIOR reduce production entrada -> ID 
-- On IGUAL reduce production entrada -> ID 
-- On FPAR reduce production entrada -> ID 
-- On ELOG reduce production entrada -> ID 
-- On DO reduce production entrada -> ID 
-- On DIV reduce production entrada -> ID 
-- On DIF reduce production entrada -> ID 

State 33:
tipo_primitivo -> FLOAT . [ WRITELN WRITE WHILE VIRG TRUE TO THEN READLN READ PTVIRG OULOG MULT MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR LITSTRING LITCHAR INT IGUAL IF ID FPAR FOR FLOAT FESCOP FALSE ELOG DPTS DO DIV DIF CASE ]
-- On WRITELN reduce production tipo_primitivo -> FLOAT 
-- On WRITE reduce production tipo_primitivo -> FLOAT 
-- On WHILE reduce production tipo_primitivo -> FLOAT 
-- On VIRG reduce production tipo_primitivo -> FLOAT 
-- On TRUE reduce production tipo_primitivo -> FLOAT 
-- On TO reduce production tipo_primitivo -> FLOAT 
-- On THEN reduce production tipo_primitivo -> FLOAT 
-- On READLN reduce production tipo_primitivo -> FLOAT 
-- On READ reduce production tipo_primitivo -> FLOAT 
-- On PTVIRG reduce production tipo_primitivo -> FLOAT 
-- On OULOG reduce production tipo_primitivo -> FLOAT 
-- On MULT reduce production tipo_primitivo -> FLOAT 
-- On MENOS reduce production tipo_primitivo -> FLOAT 
-- On MENORIGUAL reduce production tipo_primitivo -> FLOAT 
-- On MENOR reduce production tipo_primitivo -> FLOAT 
-- On MAIS reduce production tipo_primitivo -> FLOAT 
-- On MAIORIGUAL reduce production tipo_primitivo -> FLOAT 
-- On MAIOR reduce production tipo_primitivo -> FLOAT 
-- On LITSTRING reduce production tipo_primitivo -> FLOAT 
-- On LITCHAR reduce production tipo_primitivo -> FLOAT 
-- On INT reduce production tipo_primitivo -> FLOAT 
-- On IGUAL reduce production tipo_primitivo -> FLOAT 
-- On IF reduce production tipo_primitivo -> FLOAT 
-- On ID reduce production tipo_primitivo -> FLOAT 
-- On FPAR reduce production tipo_primitivo -> FLOAT 
-- On FOR reduce production tipo_primitivo -> FLOAT 
-- On FLOAT reduce production tipo_primitivo -> FLOAT 
-- On FESCOP reduce production tipo_primitivo -> FLOAT 
-- On FALSE reduce production tipo_primitivo -> FLOAT 
-- On ELOG reduce production tipo_primitivo -> FLOAT 
-- On DPTS reduce production tipo_primitivo -> FLOAT 
-- On DO reduce production tipo_primitivo -> FLOAT 
-- On DIV reduce production tipo_primitivo -> FLOAT 
-- On DIF reduce production tipo_primitivo -> FLOAT 
-- On CASE reduce production tipo_primitivo -> FLOAT 

State 34:
tipo_bool -> FALSE . [ WRITELN WRITE WHILE VIRG TRUE TO THEN READLN READ PTVIRG OULOG MULT MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR LITSTRING LITCHAR INT IGUAL IF ID FPAR FOR FLOAT FESCOP FALSE ELOG DPTS DO DIV DIF CASE ]
-- On WRITELN reduce production tipo_bool -> FALSE 
-- On WRITE reduce production tipo_bool -> FALSE 
-- On WHILE reduce production tipo_bool -> FALSE 
-- On VIRG reduce production tipo_bool -> FALSE 
-- On TRUE reduce production tipo_bool -> FALSE 
-- On TO reduce production tipo_bool -> FALSE 
-- On THEN reduce production tipo_bool -> FALSE 
-- On READLN reduce production tipo_bool -> FALSE 
-- On READ reduce production tipo_bool -> FALSE 
-- On PTVIRG reduce production tipo_bool -> FALSE 
-- On OULOG reduce production tipo_bool -> FALSE 
-- On MULT reduce production tipo_bool -> FALSE 
-- On MENOS reduce production tipo_bool -> FALSE 
-- On MENORIGUAL reduce production tipo_bool -> FALSE 
-- On MENOR reduce production tipo_bool -> FALSE 
-- On MAIS reduce production tipo_bool -> FALSE 
-- On MAIORIGUAL reduce production tipo_bool -> FALSE 
-- On MAIOR reduce production tipo_bool -> FALSE 
-- On LITSTRING reduce production tipo_bool -> FALSE 
-- On LITCHAR reduce production tipo_bool -> FALSE 
-- On INT reduce production tipo_bool -> FALSE 
-- On IGUAL reduce production tipo_bool -> FALSE 
-- On IF reduce production tipo_bool -> FALSE 
-- On ID reduce production tipo_bool -> FALSE 
-- On FPAR reduce production tipo_bool -> FALSE 
-- On FOR reduce production tipo_bool -> FALSE 
-- On FLOAT reduce production tipo_bool -> FALSE 
-- On FESCOP reduce production tipo_bool -> FALSE 
-- On FALSE reduce production tipo_bool -> FALSE 
-- On ELOG reduce production tipo_bool -> FALSE 
-- On DPTS reduce production tipo_bool -> FALSE 
-- On DO reduce production tipo_bool -> FALSE 
-- On DIV reduce production tipo_bool -> FALSE 
-- On DIF reduce production tipo_bool -> FALSE 
-- On CASE reduce production tipo_bool -> FALSE 

State 35:
entrada -> tipo_primitivo . [ WRITELN WRITE WHILE VIRG TRUE TO THEN READLN READ PTVIRG OULOG MULT MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR LITSTRING LITCHAR INT IGUAL IF ID FPAR FOR FLOAT FESCOP FALSE ELOG DO DIV DIF CASE ]
-- On WRITELN reduce production entrada -> tipo_primitivo 
-- On WRITE reduce production entrada -> tipo_primitivo 
-- On WHILE reduce production entrada -> tipo_primitivo 
-- On VIRG reduce production entrada -> tipo_primitivo 
-- On TRUE reduce production entrada -> tipo_primitivo 
-- On TO reduce production entrada -> tipo_primitivo 
-- On THEN reduce production entrada -> tipo_primitivo 
-- On READLN reduce production entrada -> tipo_primitivo 
-- On READ reduce production entrada -> tipo_primitivo 
-- On PTVIRG reduce production entrada -> tipo_primitivo 
-- On OULOG reduce production entrada -> tipo_primitivo 
-- On MULT reduce production entrada -> tipo_primitivo 
-- On MENOS reduce production entrada -> tipo_primitivo 
-- On MENORIGUAL reduce production entrada -> tipo_primitivo 
-- On MENOR reduce production entrada -> tipo_primitivo 
-- On MAIS reduce production entrada -> tipo_primitivo 
-- On MAIORIGUAL reduce production entrada -> tipo_primitivo 
-- On MAIOR reduce production entrada -> tipo_primitivo 
-- On LITSTRING reduce production entrada -> tipo_primitivo 
-- On LITCHAR reduce production entrada -> tipo_primitivo 
-- On INT reduce production entrada -> tipo_primitivo 
-- On IGUAL reduce production entrada -> tipo_primitivo 
-- On IF reduce production entrada -> tipo_primitivo 
-- On ID reduce production entrada -> tipo_primitivo 
-- On FPAR reduce production entrada -> tipo_primitivo 
-- On FOR reduce production entrada -> tipo_primitivo 
-- On FLOAT reduce production entrada -> tipo_primitivo 
-- On FESCOP reduce production entrada -> tipo_primitivo 
-- On FALSE reduce production entrada -> tipo_primitivo 
-- On ELOG reduce production entrada -> tipo_primitivo 
-- On DO reduce production entrada -> tipo_primitivo 
-- On DIV reduce production entrada -> tipo_primitivo 
-- On DIF reduce production entrada -> tipo_primitivo 
-- On CASE reduce production entrada -> tipo_primitivo 
